@@ -28,25 +28,31 @@
 #include "CoreFoundation/CFDate.h"
 #include "CoreFoundation/CFLocale.h"
 #include "CoreFoundation/CFCalendar.h"
+#include "CoreFoundation/CFString.h"
 #include "CoreFoundation/CFRuntime.h"
 
+#include <pthread.h>
 #include <unicode/ucal.h>
 
 struct __CFCalendar
 {
   CFRuntimeBase _parent;
-  UCalendar    *_cal;
+  UCalendar    *_ucal;
   CFStringRef   _ident;
+  CFStringRef   _localeIdent;
+  CFStringRef   _tzIdent;
 };
 
 static CFTypeID _kCFCalendarTypeID;
+static CFCalendarRef _kCFCalendarCurrent = NULL;
+static pthread_mutex_t _kCFCalendarLock = PTHREAD_MUTEX_INITIALIZER;
 
 static Boolean CFCalendarEqual (CFTypeRef cf1, CFTypeRef cf2)
 {
   CFCalendarRef o1 = (CFCalendarRef)cf1;
   CFCalendarRef o2 = (CFCalendarRef)cf2;
   
-  return (Boolean)ucal_equivalentTo (o1->_cal, o2->_cal);
+  return (Boolean)ucal_equivalentTo (o1->_ucal, o2->_ucal);
 }
 
 static CFStringRef CFCalendarCopyFormattingDesc (CFTypeRef cf,
@@ -73,18 +79,196 @@ void CFCalendarInitialize (void)
   _kCFCalendarTypeID = _CFRuntimeRegisterClass (&CFCalendarClass);
 }
 
+static void
+CFCalendarSetupUCalendar (CFCalendarRef cal)
+{
+  char localeIdent[ULOC_FULLNAME_CAPACITY];
+  UniChar *tzIdent = NULL; // FIXME
+  UCalendar *ucal;
+  UErrorCode err = U_ZERO_ERROR;
+  
+  if (cal->_localeIdent != NULL)
+    {
+      char calIdent[ULOC_KEYWORDS_CAPACITY];
+      CFStringGetCString (cal->_localeIdent, localeIdent,
+        ULOC_FULLNAME_CAPACITY, kCFStringEncodingASCII);
+      CFStringGetCString (cal->_ident, calIdent, ULOC_KEYWORDS_CAPACITY,
+        kCFStringEncodingASCII);
+      uloc_setKeywordValue ("calendar", (const char*)calIdent, localeIdent,
+        ULOC_FULLNAME_CAPACITY, &err);
+    }
+  
+  ucal = ucal_open (tzIdent, 0, localeIdent, UCAL_TRADITIONAL, &err);
+  if (U_FAILURE(err))
+    ucal = NULL;
+  
+  cal->_ucal = ucal;
+}
 
+static inline void
+CFCalendarOpenUCalendar (CFCalendarRef cal)
+{
+  if (cal->_ucal == NULL)
+    CFCalendarSetupUCalendar (cal);
+}
+
+static inline void
+CFCalendarCloseUCalendar (CFCalendarRef cal)
+{
+  ucal_close (cal->_ucal);
+  cal->_ucal = NULL;
+}
+
+
+
+CFTypeID
+CFCalendarGetTypeID (void)
+{
+  return _kCFCalendarTypeID;
+}
 
 CFCalendarRef
 CFCalendarCopyCurrent (void)
 {
-  return NULL;
+  if (_kCFCalendarCurrent == NULL)
+    {
+      pthread_mutex_lock (&_kCFCalendarLock);
+      if (_kCFCalendarCurrent == NULL)
+        {
+          CFLocaleRef locale;
+          CFStringRef calIdent;
+          CFCalendarRef cal;
+          
+          locale = CFLocaleCopyCurrent ();
+          calIdent = CFLocaleGetValue (locale, kCFLocaleCalendarIdentifier);
+          cal = CFCalendarCreateWithIdentifier (NULL, calIdent);
+          CFCalendarSetLocale (cal, locale);
+          
+          CFRelease (calIdent);
+          CFRelease (locale);
+          _kCFCalendarCurrent = cal;
+        }
+      pthread_mutex_unlock (&_kCFCalendarLock);
+    }
+  
+  return _kCFCalendarCurrent;
 }
 
 CFCalendarRef
 CFCalendarCreateWithIdentifier (CFAllocatorRef allocator, CFStringRef ident)
 {
+  CFLocaleRef locale;
+  CFCalendarRef new;
+  
+  if (ident != kCFGregorianCalendar
+      && ident != kCFBuddhistCalendar
+      && ident != kCFChineseCalendar
+      && ident != kCFHebrewCalendar
+      && ident != kCFIslamicCalendar
+      && ident != kCFIslamicCivilCalendar
+      && ident != kCFJapaneseCalendar
+      && ident != kCFRepublicOfChinaCalendar
+      && ident != kCFPersianCalendar
+      && ident != kCFIndianCalendar
+      && ident != kCFISO8601Calendar)
+    {
+      if (CFEqual(ident, kCFGregorianCalendar))
+        ident = kCFGregorianCalendar;
+      else if (CFEqual(ident, kCFBuddhistCalendar))
+        ident = kCFBuddhistCalendar;
+      else if (CFEqual(ident, kCFChineseCalendar))
+        ident = kCFChineseCalendar;
+      else if (CFEqual(ident, kCFHebrewCalendar))
+        ident = kCFHebrewCalendar;
+      else if (CFEqual(ident, kCFIslamicCalendar))
+        ident = kCFIslamicCalendar;
+      else if (CFEqual(ident, kCFIslamicCivilCalendar))
+        ident = kCFIslamicCivilCalendar;
+      else if (CFEqual(ident, kCFJapaneseCalendar))
+        ident = kCFJapaneseCalendar;
+      else if (CFEqual(ident, kCFRepublicOfChinaCalendar))
+        ident = kCFRepublicOfChinaCalendar;
+      else if (CFEqual(ident, kCFPersianCalendar))
+        ident = kCFPersianCalendar;
+      else if (CFEqual(ident, kCFIndianCalendar))
+        ident = kCFIndianCalendar;
+      else if (CFEqual(ident, kCFISO8601Calendar))
+        ident = kCFISO8601Calendar;
+      else
+        return NULL;
+    }
+  
+  new = (CFCalendarRef)_CFRuntimeCreateInstance (allocator, _kCFCalendarTypeID,
+    sizeof(struct __CFCalendar) - sizeof(CFRuntimeBase), NULL);
+  new->_ident = ident;
+  
+  locale = CFLocaleCopyCurrent ();
+  new->_localeIdent = CFRetain (CFLocaleGetIdentifier(locale));
+  CFRelease (locale);
+  
+  new->_tzIdent = NULL; // FIXME
+  
+  return new;
+}
+
+CFTimeZoneRef
+CFCalendarCopyTimeZone (CFCalendarRef cal)
+{
   return NULL;
+}
+
+void
+CFCalendarSetTimeZone (CFCalendarRef cal, CFTimeZoneRef tz)
+{
+}
+
+CFStringRef
+CFCalendarGetIdentifier (CFCalendarRef cal)
+{
+  return cal->_ident;
+}
+
+CFLocaleRef
+CFCalendarCopyLocale (CFCalendarRef cal)
+{
+  return CFLocaleCreate (NULL, cal->_localeIdent);
+}
+
+void
+CFCalendarSetLocale (CFCalendarRef cal, CFLocaleRef locale)
+{
+  if (cal->_localeIdent != NULL)
+    CFRelease (cal->_localeIdent);
+  cal->_localeIdent = CFRetain (CFLocaleGetIdentifier(locale));
+  CFCalendarCloseUCalendar (cal);
+}
+
+CFIndex
+CFCalendarGetFirstWeekday (CFCalendarRef cal)
+{
+  CFCalendarOpenUCalendar (cal);
+  return ucal_getAttribute (cal->_ucal, UCAL_FIRST_DAY_OF_WEEK);
+}
+
+void
+CFCalendarSetFirstWeekday (CFCalendarRef cal, CFIndex wkdy)
+{
+  CFCalendarOpenUCalendar (cal);
+  ucal_setAttribute (cal->_ucal, UCAL_FIRST_DAY_OF_WEEK, wkdy);
+}
+
+CFIndex
+CFCalendarGetMinimumDaysInFirstWeek (CFCalendarRef cal)
+{
+  CFCalendarOpenUCalendar (cal);
+  return ucal_getAttribute (cal->_ucal, UCAL_MINIMAL_DAYS_IN_FIRST_WEEK);
+}
+
+void
+CFCalendarSetMinimumDaysInFirstWeek (CFCalendarRef cal, CFIndex mwd)
+{
+  CFCalendarOpenUCalendar (cal);
+  ucal_setAttribute (cal->_ucal, UCAL_MINIMAL_DAYS_IN_FIRST_WEEK, mwd);
 }
 
 Boolean
@@ -116,6 +300,13 @@ CFCalendarGetComponentDifference (CFCalendarRef cal, CFAbsoluteTime startinAT,
   return false;
 }
 
+Boolean
+CFCalendarGetTimeRangeOfUnit (CFCalendarRef cal, CFCalendarUnit unit,
+  CFAbsoluteTime at, CFAbsoluteTime *startp, CFTimeInterval *tip)
+{
+  return false;
+}
+
 CFRange
 CFCalendarGetRangeOfUnit (CFCalendarRef cal, CFCalendarUnit smallerUnit,
   CFCalendarUnit biggerUnit, CFAbsoluteTime at);
@@ -129,66 +320,3 @@ CFCalendarGetMaximumRangeOfUnit (CFCalendarRef cal, CFCalendarUnit unit);
 
 CFRange
 CFCalendarGetMinimumRangeOfUnit (CFCalendarRef cal, CFCalendarUnit unit);
-
-CFTimeZoneRef
-CFCalendarCopyTimeZone (CFCalendarRef cal)
-{
-  return NULL;
-}
-
-void
-CFCalendarSetTimeZone (CFCalendarRef cal, CFTimeZoneRef tz)
-{
-}
-
-CFStringRef
-CFCalendarGetIdentifier (CFCalendarRef cal)
-{
-  return NULL;
-}
-
-CFLocaleRef
-CFCalendarCopyLocale (CFCalendarRef cal)
-{
-  return NULL;
-}
-
-void
-CFCalendarSetLocale (CFCalendarRef cal, CFLocaleRef locale)
-{
-}
-
-CFIndex
-CFCalendarGetFirstWeekday (CFCalendarRef cal)
-{
-  return 0;
-}
-
-void
-CFCalendarSetFirstWeekday (CFCalendarRef cal, CFIndex wkdy)
-{
-}
-
-CFIndex
-CFCalendarGetMinimumDaysInFirstWeek (CFCalendarRef cal)
-{
-  return 0;
-}
-
-void
-CFCalendarSetMinimumDaysInFirstWeek (CFCalendarRef cal, CFIndex mwd)
-{
-}
-
-CFTypeID
-CFCalendarGetTypeID (void)
-{
-  return _kCFCalendarTypeID;
-}
-
-Boolean
-CFCalendarGetTimeRangeOfUnit (CFCalendarRef cal, CFCalendarUnit unit,
-  CFAbsoluteTime at, CFAbsoluteTime *startp, CFTimeInterval *tip)
-{
-  return false;
-}
